* Updated reasons to be inline with each other

--- a/app/views/shared/_reasons.erb
+++ b/app/views/shared/_reasons.erb
@@ -10,6 +10,7 @@
 
     <div class="col-md-4">
       <div class="chart first">
+        <div class="popular">&nbsp;</div>
         <div class="quantity">
           <span class="price">1</span>
         </div>
@@ -67,6 +68,7 @@
 
     <div class="col-md-4">
       <div class="chart last">
+        <div class="popular">&nbsp;</div>
         <div class="quantity">
           <span class="price">3</span>
         </div>
