finished about us page.  all specs pass.

--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -33,7 +33,7 @@
   </div>
 
   <div class="already-account">
-    <%= link_to 'Return to the landing page', :back %>
+    <%= link_to 'Return to the previous page', :back %>
   </div>
 
 </div>
