--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -4,7 +4,7 @@
     <div class="col-md-12">
       <h2>An Exceptional College Core Program</h2>
       <p>
-        We bring relevancy and significance to the core college curriculum.
+        We bring relevancy and significance to the core curriculum.
       </p>
     </div>
   </div>
@@ -13,8 +13,8 @@
     <div class="col-md-6 info">
       <h4>Study one subject at a time...</h4>
       <p>
-        I need 40 words on ONE SUBJECT AT A TIME.
-      </p>
+        Each subject deserves your full attention.  Our sequenced, modular curriculum will enable you to discover the
+        rich, profound significance God placed in each liberal arts subject.
     </div>
     <div class="col-md-6 image" %>
       <%= holder_tag '402x242', 'one subject a time cutout 402x242', {}, class:'img-responsive' %>
@@ -27,7 +27,8 @@
     <div class="col-md-6 info">
       <h4>...in the flow of the biblical narrative.</h4>
       <p>
-        I need 40 words on THE FLOW OF THE BIBLICAL NARRATIVE
+        Each subject builds upon the previous subjects in the same manner that God created the heavens and
+        the earth before He created man, and how man created society that birthed many nations.
       </p>
     </div>
     <div class="col-md-6 image" %>
