--- a/app/views/shared/_travel.erb
+++ b/app/views/shared/_travel.erb
@@ -2,7 +2,7 @@
 
   <div class="row header">
     <div class="col-md-12">
-      <h3>Spend five months in Italy studying Fine Arts</h3>
+      <h3>Spend five weeks in Italy studying Fine Arts</h3>
     </div>
   </div>
 
