--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -5,8 +5,18 @@
       <div class="col-md-12">
         <h3>About us</h3>
         <p>
-          Rivendell Education Company was founded in 2009 by father and son team, Bobby and Davis Norment.  We are located
-          in Bloomington, Minnesota with an affiliate location in the nation state of Singapore.
+          Rivendell 5-Pursuits Program is an accredited program of San Diego Christian.
+        </p>
+        <p>
+          San Diego Christian’s Minnesota Campus is located in Bloomington, MN, a suburb of the Twin
+          Cities metropolitan area. Our beautiful 40-acre campus sits on a wooded bluff just north of the
+          Minnesota River and just west of the Minnesota Valley Country Club.
+        </p>
+        <p>
+          Our city, Bloomington, is the fifth largest in Minnesota, offering a great balance of urban
+          convenience and open spaces. While it is home to the country’s largest shopping center –
+          the Mall of America – and the Minneapolis/St. Paul International Airport, it also features more
+          than 100 parks, and just as many lakes and ponds.
         </p>
       </div>
     </div>
@@ -32,34 +42,45 @@
     <div class="row">
 
       <div class="col-md-6">
-        <h1>Our vision & mission</h1>
+        <h1>San Diego Christian's Institution Mission</h1>
         <p>
-          To reestablish the Bible as man's personal and cultural authority by developing and licensing
-          Christian, higher education programs to local communities across the world.
-        </p>
-        <p>
-          To reestablish the Bible as man's personal and cultural authority by developing and licensing
-          Christian, higher education programs to local communities across the world.
+          The mission of San Diego Christian College is to engage Christians in an academic community that
+          offers a liberal arts education, promotes an environment of scholarship, and fosters the examination
+          of truth, preparing them to influence the world through Godly character within a framework of the
+          authority and inerrancy of Scripture.
         </p>
       </div>
 
       <div class="col-md-6">
-        <h1>Our objectives</h1>
-        <ol>
-          <li>
-            To bring higher education back under the intellectual and moral authority of the Bible.
-          </li><br />
-          <li>
-            To get the biblical worldview message into the hands of as many people as possible.
-          </li><br />
-          <li>
-            To be the world's leading biblical worldview education company and media resource company.
-          </li><br />
-          <li>
-            To feed churches with the best resources to use in Sunday School classes, cell groups, and
-            adult education gathering.
-          </li>
-        </ol>
+        <h1>San Diego Christian’s Institution Value Statement</h1>
+       <p>
+         San Diego Christian College values a biblically integrated liberal arts education, by developing
+         students’ lives for the glory of God and creating a relational environment conducive to enhancing
+         the potential of individuals as they serve Christ.
+       </p>
+      </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-6">
+        <h1>Rivendell 5 Pursuits Program Mission</h1>
+        <p>
+          To bring clarity and stability to young men and women caught in an age of confusion and uncertainty
+          by providing them the intellectual, spiritual, moral, social, emotional, and physical foundations
+          and support necessary to excel in college and in life. We aim to build lives so compelling, so
+          transformative, so counter-cultural that the world is stirred to ask once again, “Who is this Jesus?”
+        </p>
+      </div>
+
+      <div class="col-md-6">
+        <h1>Rivendell 5 Pursuits Program Mission</h1>
+        <p>
+          To restore all things to Christ by imparting the biblical worldview to thousands of students in
+          multiple locations in America and around the world who will go on to serve God and mankind in every
+          arena of life.
+        </p>
       </div>
 
     </div>
@@ -67,15 +88,15 @@
     <div class="row stats">
 
       <div class="col-sm-3">
-        <strong>10</strong> faculty
+        <strong>6</strong> faculty
       </div>
 
       <div class="col-sm-3">
-        <strong>5</strong> staff
+        <strong>10</strong> staff
       </div>
 
       <div class="col-sm-3">
-        <strong>9</strong> cohorts
+        <strong>9</strong> cohorts strong
       </div>
 
       <div class="col-sm-3">
@@ -87,27 +108,44 @@
     <div class="row team">
 
       <div class="col-md-12 team-row">
-        <%= image_tag 'leadership/norment_bobby2-229x300.jpg',
-                      data: { toggle:'tooltip', placement:'top', title: 'Bobby Norment - Founder & CEO' } %>
-        <%= image_tag 'leadership/norment_davis2-229x300.jpg',
-                      data: { toggle:'tooltip', placement:'top', title: 'Davis Norment - Founder' } %>
-        <%= image_tag 'leadership/pete.png',
-                      data: { toggle:'tooltip', placement:'top', title: 'Pete Lackey - Founder & VP, Development' } %>
-        <%= image_tag 'leadership/garneau_micah2-229x300.jpg',
-                      data: { toggle:'tooltip', placement:'top', title: 'Micah Garneau - VP, Operations' } %>
-        <%= image_tag 'leadership/brunette_joe-229x300.jpg',
-                      data: { toggle:'tooltip', placement:'top', title: 'Joe Brunette - Product Manager' } %>
-        <%= image_tag 'leadership/koljonen_abby-229x300.jpg',
-                      data: { toggle:'tooltip', placement:'top', title: 'Abby Brunette - Product Manager' }%>
+        <%= image_tag 'staff/lorri-300x288.jpg', size: '90x118',
+                      data: { toggle:'tooltip', placement:'top', title: 'Lorri Ague - Dean of Adult & Professional Studies' } %>
+        <%= image_tag 'staff/evans_bev2-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Bev Evans - Director of Hospitality & Cultural Events' } %>
+        <%= image_tag 'staff/evans_robert-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Robert Evans - Student Success Coach' } %>
+        <%= image_tag 'staff/Hurlbut_Rick-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Rick Hurlbut - Faculty' } %>
+        <%= image_tag 'staff/ingle_jeffrey2-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Jeffrey Ingle - Faculty' } %>
+        <%= image_tag 'staff/kasperek_kelli2-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Joe Brunette - Admissions Counselor' } %>
       </div>
 
       <div class="col-md-12 team-row">
-        <%= image_tag 'leadership/burreson_aaron2-229x300.jpg',
-                      data: { toggle:'tooltip', placement:'top', title: 'Aaron Burreson - Manager, Student Success Center' }%>
-        <%= image_tag 'leadership/yackel_amanda2-229x300.jpg',
-                      data: { toggle:'tooltip', placement:'top', title: 'Amanda Yackel - Staff, Student Success Center' }%>
-        <%= image_tag 'leadership/stromsodt_zach2-229x300.jpg',
-                      data: { toggle:'tooltip', placement:'top', title: 'Zach Stromsodt - Manager, Information Systems' }%>
+        <%= image_tag 'staff/mauser_bj3-229x300.jpg', size: '90x118',
+                      data: { toggle:'tooltip', placement:'top', title: 'Bernard James Mauser - Faculty' } %>
+        <%= image_tag 'staff/mcconnell_donald-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Donald McConnell - Faculty' } %>
+        <%= image_tag 'staff/mikel_elaine2-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Elaine Mikel - Mentor' } %>
+        <%= image_tag 'staff/miller_bill2-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Bill Miller - Faculty' } %>
+        <%= image_tag 'staff/norment_davis2-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Davis Norment - Faculty' } %>
+        <%= image_tag 'staff/norment_jean2-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Jean Norment - Director of Mentoring' } %>
+      </div>
+
+      <div class="col-md-12 team-row">
+        <%= image_tag 'staff/poarch_jason-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Jason Poarch - Recruiting Coordinator' } %>
+        <%= image_tag 'staff/reid_david-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Dave Reid - Faculty' } %>
+        <%= image_tag 'staff/williams_jordan-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Jordan Williams - Student Life Coordinator' } %>
+        <%= image_tag 'staff/yackel_amanda2-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Amanda Yackel - Student Success Coach' } %>
       </div>
 
     </div>
@@ -122,8 +160,41 @@
       <div class="col-md-12">
         <div class="wrapper clearfix">
           <h4>Learn more about the Rivendell and San Diego Christian partnership:</h4>
-          <%= link_to 'Request brochure', new_lead_path, class:'button button-small' %>  <!-- TODO create jobs page. -->
+          <%= link_to 'Request brochure', new_lead_path, class:'button button-small' %>
         </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<div id="accreditation">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Accreditation</h1>
+        <p>
+          San Diego Christian College is accredited by the Senior Commission of the Western Association of
+          Schools and Colleges (WASC). WASC is the regional accrediting body authorized by the U.S. Department
+          of Education to ensure the academic integrity of its member institutions.
+        </p>
+        <p>
+          Accreditation means that the Commission has determined that the College offers educational opportunities
+          in a manner consistent with Commission standards, and that it is likely to continue to do so.
+        </p>
+        <p>
+          <i>Direct inquiries to:</i><br /><br />
+          WASC<br />
+          985 Atlantic Avenue, Suite 100</br />
+          Alameda, CA  94501<br />
+          Phone: (510) 748-9001
+        </p>
+        <p>
+          San Diego Christian College is registered as a Private Institution with the Minnesota Office of Higher
+          Education pursuant to sections 136A.61 to 136A.71. Registration is not an endorsement of the institution.
+          Credits earned at the institution may not transfer to all other institutions.
+        </p>
       </div>
     </div>
 
