added focus image.

--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -17,7 +17,7 @@
         rich, profound significance God placed in each liberal arts subject.
     </div>
     <div class="col-md-6 image" %>
-      <%= holder_tag '402x242', 'one subject a time cutout 402x242', {}, class:'img-responsive' %>
+      <%= image_tag 'focus-01.png', class:'img-responsive' %>
     </div>
   </div>
 
