--- a/app/views/site_pages/admissions.html.erb
+++ b/app/views/site_pages/admissions.html.erb
@@ -46,3 +46,18 @@
 
   </div>
 </div>
+
+<div id="cta">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="wrapper clearfix">
+          <h4>Take the first step on a college journey that will change your life!</h4>
+          <%= link_to 'Apply now', admissions_apply_now_path, class:'button button-small' %>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
