added image holders to the admissions page tabs

--- a/app/views/site_pages/_finaid_pane.erb
+++ b/app/views/site_pages/_finaid_pane.erb
@@ -1,4 +1,4 @@
-<div class="col-md-12 info">
+<div class="col-md-6 info">
 
   <h4>Financial Aid</h4>
 
@@ -10,6 +10,14 @@
     financial aid plan specific to you and your family’s situation. There are numerous financial sources that
     will help make the Rivendell program affordable:
   </p>
+
+</div>
+
+<div class="col-md-6 image">
+  <%= holder_tag '643x246', 'fin-aid image (643x246)', {}, class:'img-responsive' %>
+</div>
+
+<div class="col-md-12 info">
 
   <ol>
     <li>Federal financial aid (FAFSA school code: 012031)</li>
@@ -90,6 +98,5 @@
     </ul>
 
   </div>
-
 
 </div>
