--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -32,7 +32,7 @@
       </p>
     </div>
     <div class="col-md-6 image" %>
-      <%= holder_tag '371x246', 'flow of biblical narrative 371x246', {}, class:'img-responsive' %>
+      <%= image_tag 'biblical_narrative.png', class:'img-responsive' %>
     </div>
   </div>
 
