building academics page.

--- a/app/views/shared/_reasons.erb
+++ b/app/views/shared/_reasons.erb
@@ -3,7 +3,7 @@
   <div class="row header">
     <div class="col-md-12">
       <h3>Three great reasons to start college with Rivendell</h3>
-      <p>Become a student of honor, not just an honor student.</p>
+      <p>We bring relevancy and significance to the college core.</p>
     </div>
   </div>
   <div class="row charts">
