--- a/app/views/layouts/_head.erb
+++ b/app/views/layouts/_head.erb
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Red Sherpa LLC">
 
-<title>Rivendell Education Company</title>
+<title><%= title %></title>
 
 <%= stylesheet_link_tag    'application', params[:controller], media: 'all', 'data-turbolinks-track' => true %>
 
