changed student landing page.

--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -12,7 +12,7 @@
       <h4>Study one subject at a time...</h4>
       <p>
         Each subject deserves your full attention.  Our sequenced, modular curriculum will enable you to discover the
-        rich, profound significance God placed in each liberal arts subject.
+        rich, profound significance God placed in the liberal arts.
     </div>
     <div class="col-md-6 image" %>
       <%= image_tag 'focus-01.png', class:'img-responsive' %>
@@ -25,8 +25,7 @@
     <div class="col-md-6 info">
       <h4>...in the flow of the biblical narrative.</h4>
       <p>
-        Each subject builds upon the previous subjects in the same manner that God created the heavens and
-        the earth before He created man, and how man created society that birthed many nations.
+        Cultivate a love for learning by discovering the unity of knowledge.
       </p>
     </div>
     <div class="col-md-6 image" %>
