--- a/app/views/shared/_hero.erb
+++ b/app/views/shared/_hero.erb
@@ -6,7 +6,7 @@
   </h1>
 
   <p class="sub-text animated fadeInDown">
-    Experience the journey of your lifetime.
+    Experience the journey of a lifetime.
   </p>
 
   <div class="cta animated fadeInDown">   <!-- TODO add anchors on each linked page -->
