--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -69,6 +69,20 @@
             </div>
           </div>
 
+          <div id="globally" class="tab-pane fade">     <!-- SEQUENTIALLY -->
+            <div class="col-md-6 image">
+              <%= holder_tag '359x222', 'globally image (359x322)', {}, class:'img-responsive' %>
+            </div>
+            <div class="col-md-6 info">
+              <h4>Journey through the college core <strong><i>globally</i></strong></h4>
+              <p>Study the liberal arts one subject at a time in the flow of the biblical narrative.</p>
+              <ul>
+                <li>Generate a love for learning</li>
+                <li>Intake the unity of knowledge</li>
+              </ul>
+            </div>
+          </div>
+
         </div>
 
       </div>
