completed skeleton of eight-ways landing page.

--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -3,7 +3,7 @@
   <div class="row header">
     <div class="col-md-12">
       <h2>An Exceptional College Core Program</h2>
-      <p>Don't just take the college core curriculum.  <strong>Experience</strong> it.</p>
+      <p>Don't just take the core curriculum.  <strong>Experience</strong> it.</p>
     </div>
   </div>
 
