--- a/app/views/shared/_hero.erb
+++ b/app/views/shared/_hero.erb
@@ -9,7 +9,7 @@
     Experience the journey of a lifetime.
   </p>
 
-  <div class="cta animated fadeInDown">   <!-- TODO add anchors on each linked page -->
+  <div class="cta animated fadeInDown">
     <%= link_to 'Request a brochure', new_lead_path, class:'button-outline' %>
   </div>
 
