added attributes to academics page.

--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -69,16 +69,76 @@
             </div>
           </div>
 
-          <div id="globally" class="tab-pane fade">     <!-- SEQUENTIALLY -->
+          <div id="globally" class="tab-pane fade">     <!-- GLOBALLY -->
             <div class="col-md-6 image">
               <%= holder_tag '359x222', 'globally image (359x322)', {}, class:'img-responsive' %>
             </div>
             <div class="col-md-6 info">
               <h4>Journey through the college core <strong><i>globally</i></strong></h4>
-              <p>Study the liberal arts one subject at a time in the flow of the biblical narrative.</p>
+              <p>Study the fine arts in Rome, Florence, Venice, and Assisi.  Need we say more?</p>
               <ul>
-                <li>Generate a love for learning</li>
-                <li>Intake the unity of knowledge</li>
+                <li>Experience cross-cultural living</li>
+                <li>Create a connoisseur's eye for beauty</li>
+                <li>Increase aesthetic sensitivity</li>
+              </ul>
+            </div>
+          </div>
+
+          <div id="critically" class="tab-pane fade">     <!-- CRITICALLY -->
+            <div class="col-md-6 info">
+              <h4>Think through the college core <strong><i>critically</i></strong></h4>
+              <p>Learn a critical thinking method and apply it every day to every subject and assignment.</p>
+              <ul>
+                <li>Learn how to learn</li>
+                <li>Generate a cultural critique</li>
+                <li>Transform from a passive think to a master thinker</li>
+              </ul>
+            </div>
+            <div class="col-md-6 image">
+              <%= holder_tag '359x222', 'critically image (359x322)', {}, class:'img-responsive' %>
+            </div>
+          </div>
+
+          <div id="classically" class="tab-pane fade">     <!-- CLASSICALLY -->
+            <div class="col-md-6 image">
+              <%= holder_tag '359x222', 'classically image (359x322)', {}, class:'img-responsive' %>
+            </div>
+            <div class="col-md-6 info">
+              <h4>Approach the college core <strong><i>classically</i></strong></h4>
+              <p>Learn from the greatest minds who ever lived.</p>
+              <ul>
+                <li>Study under the original authors of the 'Great Books'</li>
+                <li>Have a little genius rub off on you</li>
+              </ul>
+            </div>
+          </div>
+
+          <div id="socratically" class="tab-pane fade">     <!-- SOCRATICALLY -->
+            <div class="col-md-6 info">
+              <h4>Discuss the college core <strong><i>socratically</i></strong></h4>
+              <p>Question and discuss subjects instead of listening to lectures.</p>
+              <ul>
+                <li>Learn actively</li>
+                <li>Listen</li>
+                <li>Surface truth</li>
+              </ul>
+            </div>
+            <div class="col-md-6 image">
+              <%= holder_tag '359x222', 'socratically image (359x322)', {}, class:'img-responsive' %>
+            </div>
+          </div>
+
+          <div id="holistically" class="tab-pane fade">     <!-- HOLISTICALLY -->
+            <div class="col-md-6 image">
+              <%= holder_tag '359x222', 'holistically image (359x322)', {}, class:'img-responsive' %>
+            </div>
+            <div class="col-md-6 info">
+              <h4>Practice the college core <strong><i>holistically</i></strong></h4>
+              <p>You are more than a brain.  You are intellectual, spiritual, moral, social, and emotional.</p>
+              <ul>
+                <li>Develop habits of character.</li>
+                <li>Polish life skills essential for success</li>
+                <li>Become a Student of Honor<sup><small>TM</small></sup></li>
               </ul>
             </div>
           </div>
@@ -86,6 +146,66 @@
         </div>
 
       </div>
+    </div>
+
+  </div>
+</div>
+
+<div id="second-option">
+  <div class="container">
+
+    <div class="row header">
+      <div class="col-md-12">
+        <h2>Imagine an education that prepares you for life!</h2>
+        <p>Rivendell 5 Pursuits Program is the perfect place to begin your college journey.</p>
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-4 feature">
+        <%= image_tag 'circle-icons/one-color/denied.png' %>
+        <strong>No majors, minors, and specializations</strong>
+        <p>Undertake a 16-month, biblically centered liberal arts curriculum that prepares you for life.</p>
+      </div>
+
+      <div class="col-md-4 feature">
+        <%= image_tag 'circle-icons/one-color/takeoff.png' %>
+        <strong>Global</strong>
+        <p>Study Fine Arts in Rome, Venice, Florence, and Assisi.</p>
+      </div>
+
+      <div class="col-md-4 feature">
+        <%= image_tag 'circle-icons/one-color/x.png' %>
+        <strong>No lectures or textbooks</strong>
+        <p>
+          The Bible and great literary classics replace contemporary textbooks.  Socratic discussions
+          replace lectures.
+        </p>
+      </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-4 feature">
+        <%= image_tag 'circle-icons/one-color/lightbulb.png' %>
+        <strong>Critical thinking</strong>
+        <p>Apply principles of logic and disciplines useful for critical evaluation.</p>
+      </div>
+
+      <div class="col-md-4 feature">
+        <%= image_tag 'circle-icons/one-color/global.png' %>
+        <strong>Authentic community</strong>
+        <p>Belong to a group of 20-30 colleagues, 2 faculty, and a mentor for your entire 16-month experience.</p>
+      </div>
+
+      <div class="col-md-4 feature">
+        <%= image_tag 'circle-icons/one-color/heart.png' %>
+        <strong>Apprenticeship</strong>
+        <p>Practice daily what you are taught.</p>
+      </div>
+
     </div>
 
   </div>
