--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -5,7 +5,7 @@
       <div class="col-md-12">
         <h3>About us</h3>
         <p>
-          Rivendell 5-Pursuits Program is an accredited program of San Diego Christian.
+          Rivendell 5 Pursuits Program is an accredited program of San Diego Christian.
         </p>
         <p>
           San Diego Christian’s Minnesota Campus is located in Bloomington, MN, a suburb of the Twin
