added YT link to all footers.

--- a/app/views/layouts/_landing_footer.erb
+++ b/app/views/layouts/_landing_footer.erb
@@ -31,17 +31,19 @@
       <%= content_tag :li, link_to('Twitter', @twitter_url) %>
       <%= content_tag :li, link_to('Facebook', @facebook_url) %>
       <%= content_tag :li, link_to('Pinterest', @pinterest_url) %>
+      <%= content_tag :li, link_to('YouTube', @youtube_url) %>
     </ul>
 
   </div>
 
   <div class="col-sm-3 menu">
 
-    <h3>Industry</h3>
+    <h3>Industry Friends</h3>
     <ul>
-      <%= content_tag :li, link_to('Education Today', '#') %>
-      <%= content_tag :li, link_to('Todays Education', '#') %>
-      <%= content_tag :li, link_to('Micah', '#') %>
+      <%= content_tag :li, link_to('Circle Institute', 'https://www.circeinstitute.org/blog', target:'_blank') %>
+      <%= content_tag :li, link_to('Classical Conversations', 'https://www.classicalconversations.com/articles', target:'_blank') %>
+      <%= content_tag :li, link_to('Summit Ministries', 'http://www.summit.org/blogs/the-presidents-desk/', target:'_blank') %>
+      <%= content_tag :li, link_to('BreakPoint', 'http://thepoint.breakpoint.org/tp-home', target:'_blank') %>
     </ul>
 
   </div>
