--- a/app/views/layouts/opt_in.html.erb
+++ b/app/views/layouts/opt_in.html.erb
@@ -12,6 +12,8 @@
 
     <%= yield %>
 
+    <%= render 'shared/infusionsoft_tracker' %>
+
     <%= debug(params) if Rails.env.development? %>
 
 </body>
