--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -24,9 +24,11 @@
 
         <div class="container">
             <%= render 'layouts/landing_footer' %>
-    </div>
+        </div>
 
     </div>
+
+    <%= render 'shared/infusionsoft_tracker' %>
 
     <%= debug(params) if Rails.env.development? %>
 
