added infrastructure for 8 academic pages.  wrote tests for site and landing page CTAs.  all specs pass.

--- a/app/views/layouts/_navigation.erb
+++ b/app/views/layouts/_navigation.erb
@@ -1,6 +1,6 @@
 <%= nav_link_to 'About', about_path, {}, { wrapper: 'li' } %>
 
-<%= nav_link_to 'Academics', academics_path, {}, { wrapper: 'li' } %>
+<%= nav_link_to 'Academics', academics_path, {}, { wrapper: 'li', url_segment: 1 } %>
 
 <%= nav_link_to 'Student Life', student_life_path, {}, { wrapper: 'li' } %>
 
