--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -160,7 +160,7 @@
       <div class="col-md-12">
         <div class="wrapper clearfix">
           <h4>Learn more about the Rivendell and San Diego Christian partnership:</h4>
-          <%= link_to 'Request brochure', new_lead_path, class:'button button-small' %>
+          <%= link_to 'Request a brochure', new_lead_path, class:'button button-small' %>
         </div>
       </div>
     </div>
