moved view files out of folders back into site directory

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,6 +35,7 @@
 @import 'partials/pages/index';
 @import 'partials/pages/aboutus';
 @import 'partials/pages/features';
+@import 'partials/pages/blogpost';
 @import 'partials/pages/services';
 @import 'partials/pages/portfolio';
 @import 'partials/pages/contactus';
