--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -31,6 +31,7 @@
                 <li>Connect life with all of scripture</li>
                 <li>Buttress a defense of your faith</li>
               </ul>
+              <%= content_tag :p, academics_read_more_link('christianly') %>
             </div>
             <div class="col-md-6 image">
               <%= holder_tag '359x222', 'christianly image (359x322)', {}, class:'img-responsive' %>
@@ -48,6 +49,7 @@
                 <li>Generate a love for learning</li>
                 <li>Intake the unity of knowledge</li>
               </ul>
+              <%= content_tag :p, academics_read_more_link('sequentially') %>
             </div>
           </div>
 
@@ -63,6 +65,7 @@
                 <li>Broaden your capacity to love unconditionally</li>
                 <li>Foster deep and meaningful relationships with peers and faculty</li>
               </ul>
+              <%= content_tag :p, academics_read_more_link('communally') %>
             </div>
             <div class="col-md-6 image">
               <%= holder_tag '359x222', 'communally image (359x322)', {}, class:'img-responsive' %>
@@ -81,6 +84,7 @@
                 <li>Create a connoisseur's eye for beauty</li>
                 <li>Increase aesthetic sensitivity</li>
               </ul>
+              <%= content_tag :p, academics_read_more_link('globally') %>
             </div>
           </div>
 
@@ -93,6 +97,7 @@
                 <li>Generate a cultural critique</li>
                 <li>Transform from a passive think to a master thinker</li>
               </ul>
+              <%= content_tag :p, academics_read_more_link('critically') %>
             </div>
             <div class="col-md-6 image">
               <%= holder_tag '359x222', 'critically image (359x322)', {}, class:'img-responsive' %>
@@ -110,6 +115,7 @@
                 <li>Study under the original authors of the 'Great Books'</li>
                 <li>Have a little genius rub off on you</li>
               </ul>
+              <%= content_tag :p, academics_read_more_link('classically') %>
             </div>
           </div>
 
@@ -122,6 +128,7 @@
                 <li>Listen</li>
                 <li>Surface truth</li>
               </ul>
+              <%= content_tag :p, academics_read_more_link('socratically') %>
             </div>
             <div class="col-md-6 image">
               <%= holder_tag '359x222', 'socratically image (359x322)', {}, class:'img-responsive' %>
@@ -140,6 +147,7 @@
                 <li>Polish life skills essential for success</li>
                 <li>Become a Student of Honor<sup><small>TM</small></sup></li>
               </ul>
+              <%= content_tag :p, academics_read_more_link('holistically') %>
             </div>
           </div>
 
@@ -156,7 +164,7 @@
 
     <div class="row header">
       <div class="col-md-12">
-        <h2>Imagine an education that prepares you for life!</h2>
+        <h2>Imagine a college education that also prepares you for life!</h2>
         <p>Rivendell 5 Pursuits Program is the perfect place to begin your college journey.</p>
       </div>
     </div>
