--- a/app/views/site_pages/christianly.html.erb
+++ b/app/views/site_pages/christianly.html.erb
@@ -7,5 +7,28 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-10 post">
+
+        <div class="title">
+          Learn the college core <strong><em>Christianly</em></strong>
+        </div>
+        <div class="author">
+          There is a little space here for another sentence.
+        </div>
+
+        <div class="content">
+          <p>
+            A whole lot of content goes here.
+          </p>
+        </div>
+
+        <div class="other-posts">
+          <%= link_to 'Progress though the college core sequentially →', academics_sequentially_path, class:'next pull-right' %>
+        </div>
+
+      </div>
+    </div>
+
   </div>
 </div>
