writing tests for academics navigation link.

--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -164,8 +164,8 @@
 
     <div class="row header">
       <div class="col-md-12">
-        <h2>Imagine a college education that also prepares you for life!</h2>
-        <p>Rivendell 5 Pursuits Program is the perfect place to begin your college journey.</p>
+        <h2>Imagine a college program that prepares you for life!</h2>
+        <p>Rivendell 5 Pursuits Program equips you with with the foundations to success in college and in life.</p>
       </div>
     </div>
 
