--- a/app/views/site_pages/socratically.html.erb
+++ b/app/views/site_pages/socratically.html.erb
@@ -24,7 +24,8 @@
         </div>
 
         <div class="other-posts">
-          <%= link_to '← Approach the college core socratically', academics_socratically_path, class:'prev' %>
+          <%= link_to '← Approach the college core classically', academics_classically_path, class:'prev' %>
+          <%= link_to 'Practice the college core holistically →', academics_holistically_path, class:'next pull-right' %>
         </div>
 
       </div>
