--- a/app/views/site_pages/christianly.html.erb
+++ b/app/views/site_pages/christianly.html.erb
@@ -24,7 +24,7 @@
         </div>
 
         <div class="other-posts">
-          <%= link_to 'Progress though the college core sequentially →', academics_sequentially_path, class:'next pull-right' %>
+          <%= link_to 'Progress through the college core sequentially →', academics_sequentially_path, class:'next pull-right' %>
         </div>
 
       </div>
